--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -313,7 +313,7 @@ button, a {
   }
   .bx_infor{
     @include setCont(100%, 106px, block, relative);
-    box-shadow: 0px 0px 20px rgba(247 , 199, 0, 0.4);
+    box-shadow: 0 0 10px 2px rgba(0,0,0,0.09);
     margin-top: 20px;
     text-align: center;
     border-radius: 10px;
@@ -324,7 +324,8 @@ button, a {
         border-right: 1px solid #EBEBEB;
       }
       span{
-        @include font(15, 15, #6c6c6c, 400);
+        @include font(15, 15, $black, 400);
+        font-family: 'Pretendard-SemiBold';
         display: block;
         margin-bottom: 18px;
       }
@@ -459,6 +460,7 @@ button, a {
       &:before{
         @include setCont(30px, 30px, block, relative);
         @include font(12, 12, $black);
+        min-width: 30px;
         font-family: 'Pretendard-SemiBold';
         content: '01';
         line-height: 30px;
