--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -215,3 +215,169 @@ footer{
     }
   }
 }
+
+
+
+#wrapper {
+  width: 960px;
+  margin: 0 auto;
+}
+
+#wrapper {
+  perspective: 2500;
+  -webkit-perspective: 2500;
+  width: 800px;
+  margin: 100px auto 0 auto;
+  perspective-origin: 50% 150px;
+  -webkit-perspective-origin: 50% 150px;
+  transition: perspective, 1s;
+  -o-transition: -o-perspective, 1s;
+  -moz-transition: -moz-perspective, 1s;
+  -webkit-transition: -webkit-perspective, 1s;
+}
+
+#image:hover {
+  animation-play-state:paused;
+  -o-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -webkit-animation-play-state:paused;
+}
+
+
+@-webkit-keyframes spin {
+  from {
+    transform: rotateY(0);
+    -o-transform: rotateY(0);
+    -ms-transform: rotateY(0);
+    -moz-transform: rotateY(0);
+    -webkit-transform: rotateY(0);
+  }
+  to {
+    transform: rotateY(-360deg);
+    -o-transform: rotateY(-360deg);
+    -ms-transform: rotateY(-360deg);
+    -moz-transform: rotateY(-360deg);
+    -webkit-transform: rotateY(-360deg);
+  }
+}
+
+#image {
+  margin: 0 auto;
+  height: 300px;
+  width: 400px;
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  animation: spin 24s infinite linear;
+  -moz-animation: spin 24s infinite linear;
+  -o-animation: spin 24s infinite linear;
+  -webkit-animation: spin 24s infinite linear;
+}
+
+.image {
+  position: absolute;
+  height: 300px;
+  width: 400px;
+  border-radius: 25px;
+  text-align: center;
+  font-size: 20em;
+  color: #fff;
+}
+
+#image > .i1 {
+  background-color: rgba(255, 255, 255,0.7);
+  box-shadow: 0 0 20px 2px rgba(0,0,0,0.08);
+  transform: translateZ(485px);
+  -moz-transform: translateZ(485px);
+  -o-transform: translateZ(485px);
+  -ms-transform: translateZ(485px);
+  -webkit-transform: translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/uiux_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i2 {
+  transform: rotateY(45deg) translateZ(485px);
+  -moz-transform: rotateY(45deg) translateZ(485px);
+  -o-transform: rotateY(45deg) translateZ(485px);
+  -ms-transform: rotateY(45deg) translateZ(485px);
+  -webkit-transform: rotateY(45deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/graphic_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i3 {
+  transform: rotateY(90deg) translateZ(485px);
+  -moz-transform: rotateY(90deg) translateZ(485px);
+  -o-transform: rotateY(90deg) translateZ(485px);
+  -ms-transform: rotateY(90deg) translateZ(485px);
+  -webkit-transform: rotateY(90deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/3d_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i4 {
+  transform: rotateY(135deg) translateZ(485px);
+  -moz-transform: rotateY(135deg) translateZ(485px);
+  -o-transform: rotateY(135deg) translateZ(485px);
+  -ms-transform: rotateY(135deg) translateZ(485px);
+  -webkit-transform: rotateY(135deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/ani_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i5 {
+  box-shadow: 0 0 20px 2px rgba(0,0,0,0.08);
+  background-color: rgba(0, 0, 0, 0.8);
+  transform: rotateY(180deg) translateZ(485px);
+  -moz-transform: rotateY(180deg) translateZ(485px);
+  -o-transform: rotateY(180deg) translateZ(485px);
+  -ms-transform: rotateY(180deg) translateZ(485px);
+  -webkit-transform: rotateY(180deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/packa_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i6 {
+  background-color: rgba(255, 255, 255,0.7);
+  box-shadow: 0 0 20px 2px rgba(0,0,0,0.08);
+  transform: rotateY(225deg) translateZ(485px);
+  -moz-transform: rotateY(225deg) translateZ(485px);
+  -o-transform: rotateY(225deg) translateZ(485px);
+  -ms-transform: rotateY(225deg) translateZ(485px);
+  -webkit-transform: rotateY(225deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/uiux_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i7 {
+  transform: rotateY(270deg) translateZ(485px);
+  -moz-transform: rotateY(270deg) translateZ(485px);
+  -o-transform: rotateY(270deg) translateZ(485px);
+  -ms-transform: rotateY(270deg) translateZ(485px);
+  -webkit-transform: rotateY(270deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/graphic_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+#image > .i8 {
+  transform: rotateY(315deg) translateZ(485px);
+  -moz-transform: rotateY(315deg) translateZ(485px);
+  -o-transform: rotateY(315deg) translateZ(485px);
+  -ms-transform: rotateY(315deg) translateZ(485px);
+  -webkit-transform: rotateY(315deg) translateZ(485px);
+  &::before{
+    @include setCont(100%, 100%, block, relative);
+    @include bg("/3d_main.svg", no-repeat, 50% 50%, 100% auto);
+  }
+}
+
+img {
+  border-radius: 25px;
+}
