--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -691,7 +691,62 @@ button, a {
   background: $yellow;
 }
 
-/* progress-bar */
-.swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-    background-color: crimson;
+.c-modal {
+  @include setCont(300px, 180px, block, fixed);
+  @include font(20, 20, $black);
+  font-family: 'Pretendard-SemiBold';
+	margin: auto;
+  padding: 50px 30px;
+  border-radius: 20px;
+  background-color: #fff;
+	z-index: 10001;
+	opacity: 1;
+  left: 50%;
+  top: 30%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  animation: fadeIn 0.25s ease-out forwards;
+  .btns{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    margin-top: 20px;
+    .modal-exit-btn, a{
+      @include font(15, 15, $black);
+      font-family: 'Pretendard-SemiBold';
+      width: calc(100% - 52%);
+      height: 50px;
+      line-height: 50px;
+      background-color: #ddd;
+      border-radius: 50px;
+    }
+    a{
+      background-color: $yellow;
+    }
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bg {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0,0,0,.6);
+  z-index: 10000;
+  opacity: 1;
+}
+
+#list li {
+  cursor: pointer;
 }
