--- a/src/assets/scss/_sub.scss
+++ b/src/assets/scss/_sub.scss
@@ -508,6 +508,30 @@ a {
           @include bg("/2d/2d3.png", no-repeat, 50% 50%, auto 100%);
         }
       }
+      &:nth-of-type(4){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d4.jpeg", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(5){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d5.jpeg", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(6){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d6.jpeg", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(7){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d7.jpeg", no-repeat, 50% 50%, auto 100%);
+        }
+      }
     }
    }
 }
@@ -642,13 +666,31 @@ a {
       &:nth-of-type(2){
         .img{
           @include setCont(100%, 100%, block, relative);
-          @include bg("/basicstere/basicstere2.png", no-repeat, 50% 50%, 100% auto);
+          @include bg("/basicstere/basicstere2.png", no-repeat, 50% 50%, auto 100%);
         }
       }
       &:nth-of-type(3){
         .img{
           @include setCont(100%, 100%, block, relative);
-          @include bg("/basicstere/basicstere3.png", no-repeat, 50% 50%, 100% auto);
+          @include bg("/basicstere/basicstere3.png", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(4){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/basicstere/basicstere4.png", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(5){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/basicstere/basicstere5.jpeg", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(6){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/basicstere/basicstere6.png", no-repeat, 50% 50%, auto 100%);
         }
       }
     }
@@ -1029,6 +1071,18 @@ a {
           @include bg("/3d/3d3.png", no-repeat, 50% 50%, 100% auto);
         }
       }
+      &:nth-of-type(4){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/3d/3d4.jpg", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(5){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/3d/3d5.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
     }
    }
 }
@@ -1202,7 +1256,65 @@ a {
         display: block;
       }
     }
-   } 
+   }
+   .swiper{
+    .swiper-slide{
+      &:nth-of-type(1){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience1.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(2){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience3.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(3){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience4.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(4){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience5.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(5){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience6.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(6){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience7.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(7){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience8.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(8){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience9.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(9){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience10.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+    }
+   }
 }
 // 디자인매니지먼트
 .management{
