메인스타일변경, 백버튼 수정

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -3,7 +3,7 @@
     transition-timing-function: linear;
     a{
       @include setCont(100%, 100%, flex); 
-      padding: 20px;
+      padding: 25px;
       dt{
         margin-top: 23px;
       }
@@ -81,10 +81,20 @@
     background: linear-gradient(to right, #f8d14e 0%,#2ce0bf 19%,#76dd2c 40%,#dba62b 60%,#f9dc56 83%,#f8d14e 100%); 
     background-size: 10000px 100%;
     animation: bg 15s linear infinite ;
-    padding-top: 60px;
+    padding: 60px 0 0 0;
+    #btn_group{
+      top: 0px;
+    }
+    h1{
+      @include font(28, 34);
+      position: absolute;
+      color: $black;
+      font-family: 'Pretendard-Bold';
+      padding: 10px 25px 0 25px;
+    }
     .img{
-      @include setCont(198px, 553px, block, relative);
-      @include bg("/main_a2.svg", no-repeat, 50% 50%, 100% auto);
+      @include setCont(100%, 460px, block, relative);
+      @include bg("/main_a2_1.png", no-repeat, 50% 50%, contain);
       @include blind;
       margin:  0 auto;
       z-index: 1000;
@@ -126,14 +136,14 @@
       }
     }
   }
-
   .a2{
     position: relative;
-    margin-top: -240px;
-    background-color: #f5f5f5;
+    margin-top: -75px;
+    background-color: #fff;
     box-shadow: 0px -20px 20px 0.2px rgba(0, 0, 0,0.2);
     z-index: 2000;
     border-radius: 30px 30px 0 0;
+    padding-bottom: 20px;
     .bx_step{
       h2{
         @include font(24, 29, $black);
@@ -151,7 +161,7 @@
           align-items: center;
           margin-bottom: 14px;
           .s_right{
-            font-family: 'Pretendard-Bold';
+            font-family: 'Pretendard-Medium';
             margin-left: 7px;
           }
         }
@@ -173,14 +183,15 @@
             margin: 30px 0 0 0;
           }
           button{
-            @include setCont(85%, 45px, block, relative);
-            @include font(15, 15, $white);
+            @include setCont(95%, 50px, block, relative);
+            @include font(18, 18, $white);
             font-family: 'Pretendard-SemiBold';
             margin: 0 auto;
             margin-bottom: 30px;
             border-radius: 30px;
             background: rgb(247,199,0);
             background: linear-gradient(90deg, rgba(247,199,0,1) 0%, rgba(251,159,130,1) 100%);
+            box-shadow: 0 5px 10px rgba(247, 199, 160, 0.8);
           }
         }
         &.s1{
@@ -188,26 +199,17 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            .img{
-              @include setCont(100%, auto, block);
-              min-height: 170px;
-              @include bg("/step1_1.png", no-repeat, 50% 50%, 100% auto);
-              @include blind;
-              margin: 0 auto;
-              margin-bottom: 20px;
-            }
           }     
         }
         &.s2{
           .s_cont{
             width: 100%;
             .img{
-              @include setCont(230px, 150px, block);
-              @include bg("/step2.png", no-repeat, 50% 50%, 100% auto);
+              @include setCont(230px, 300px, block);
+              @include bg("/step2_2.png", no-repeat, 50% 50%, 100% auto);
               @include blind;
               margin: 0 auto;
-              margin-top: 30px;
-              margin-bottom: 30px;
+              margin-top: 10px;
             }
           }     
         }
@@ -215,12 +217,12 @@
           .s_cont{
             width: 100%;
             .img{
-              @include setCont(200px, 170px, block);
-              @include bg("/step3.png", no-repeat, 50% 50%, 100% auto);
+              @include setCont(210px, 180px, block);
+              @include bg("/step3_3.jpg", no-repeat, 50% 50%, 100% auto);
               @include blind;
               margin: 0 auto;
               margin-top: 30px;
-              margin-bottom: 30px;
+              margin-bottom: 40px;
             }
           }     
         }
@@ -229,12 +231,12 @@
             width: 100%;
             margin-bottom: 10px;
             .img{
-              @include setCont(200px, 270px, block);
-              @include bg("/step4.png", no-repeat, 50% 50%, 100% auto);
+              @include setCont(200px, 280px, block);
+              @include bg("/step4_4.jpg", no-repeat, 50% 50%, 100% auto);
               @include blind;
               margin: 0 auto;
               margin-top: 30px;
-              margin-bottom: 30px;
+              margin-bottom: 40px;
             }
           }   
         }
