--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -161,13 +161,14 @@ button, a {
   }
 }
 .bx_lecture_list{
-  @include setCont(100%, 280px, block, relative);
+  @include setCont(100%, 320px, block, relative);
   box-shadow: 0 0 20px rgba(67,67,67,0.2);
   background-color: $white;
   margin-bottom: 30px;
+  border-radius: 20px;
   a{
     display: flex;
-    border-radius: 10px;
+    border-radius: 20px;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
@@ -176,13 +177,13 @@ button, a {
       @include blind;
     }
     .tit{
-      @include font(18, 20, $black);
+      @include font(20, 23, $white);
       font-family: 'Pretendard-SemiBold';
       display: flex;
       align-items: center;
       &::after{
         @include setCont(47px, 18px, flex, relative);
-        @include font(12, 12, $black, 500);
+        @include font(12, 12, $white, 500);
         content: 'HOT';
         background: rgb(254,222,130);
         background: linear-gradient(90deg, rgba(254,222,130,1) 0%, rgba(251,159,130,1) 100%);
@@ -193,29 +194,33 @@ button, a {
       }
     }
     .tit_sub{
-      @include font(16, 22, #9E9E9E, 400);
+      @include font(16, 22, $white, 400);
       letter-spacing : -1px;
       font-family: 'Pretendard-Medium';
       text-align: left;
       overflow: hidden;
       display: -webkit-box;
       -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2;
+      -webkit-line-clamp: 3;
       margin-top: 7px;
     }
     &.one{
+      background-color: #F48383;
+      box-shadow: 0 0 20px 2px rgba(253, 117, 117, 0.5);
       .img{
-        @include setCont(196px, 136px, block, relative);
-        @include bg("/uiux_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include setCont(190px, 140px, block, relative);
+        @include bg("/t_cont_two.png", no-repeat, 50% 50%, 100% auto);
       }
     }
     &.two{
-      background-color: #FDD549;
+      background-color: #FACC2D;
+      box-shadow: 0 0 20px 2px rgba(188, 148, 8, 0.4);
       .img{
-        @include setCont(136px, 136px, block, relative);
-        @include bg("/graphic_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include setCont(180px, 136px, block, relative);
+        @include bg("/t_cont_four.png", no-repeat, 50% 50%, 100% auto);
       }
       .tit{
+        color: $black;
         &::after{
           content: 'BEST';
           background: rgb(151,255,164);
@@ -243,9 +248,10 @@ button, a {
     &.four{
       display: block;
       background-color: #AA8FFF;
+      box-shadow: 0 0 20px 2px rgba(121, 0, 242, 0.4);
       .img{
-        @include setCont(160px, 156px, block, relative);
-        @include bg("/motion_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include setCont(180px, 156px, block, relative);
+        @include bg("/t_cont_one.png", no-repeat, 50% 50%, 100% auto);
       }
       .tit{
         color: $white;
@@ -255,10 +261,12 @@ button, a {
       }
     }
     &.five{
+      background-color: #37DD80;
+      box-shadow: 0 0 20px 2px rgba(1, 150, 69, 0.4);
       display: block;
       .img{
         @include setCont(160px, 156px, block, relative);
-        @include bg("/package_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include bg("/t_cont_three.png", no-repeat, 50% 50%, 100% auto);
       }
     }
   }
@@ -453,8 +461,8 @@ button, a {
   li{
     @include setCont(100%, auto, block, relative);
     box-shadow: 0px 0px 10px rgba(67,67,67,0.1);
-    margin-top: 10px;
-    border-radius: 10px;
+    margin-top: 15px;
+    border-radius: 20px;
     text-align: left;
     padding: 18px 15px;
     p{
@@ -507,6 +515,8 @@ button, a {
 .header-wrapicon2{
   @include setCont(61px, 61px, block, relative);
   @include bg("/cart.png", no-repeat, 50% 50%, 100% auto);
+  border-radius: 61px;
+  box-shadow: 0 5px 10px rgba(255,229,160,.8);
   img{
     @include setCont(60px, 60px, block, relative);
     margin: 0 auto;
@@ -696,17 +706,25 @@ button, a {
   @include font(20, 20, $black);
   font-family: 'Pretendard-SemiBold';
 	margin: auto;
-  padding: 50px 30px;
+  padding: 20px 0 0 0;
   border-radius: 20px;
   background-color: #fff;
 	z-index: 10001;
 	opacity: 1;
   left: 50%;
-  top: 30%;
+  top: 50%;
   text-align: center;
   transform: translate(-50%, -50%);
+  margin-top: -30px;
   animation: fadeIn 0.25s ease-out forwards;
+  span{
+    display: block;
+    margin-top: 20px;
+  }
   .btns{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -714,14 +732,17 @@ button, a {
     .modal-exit-btn, a{
       @include font(15, 15, $black);
       font-family: 'Pretendard-SemiBold';
-      width: calc(100% - 52%);
+      width: 50%;
       height: 50px;
       line-height: 50px;
       background-color: #ddd;
-      border-radius: 50px;
+      &.modal-exit-btn{
+        border-radius: 0 0 0 20px;
+      }
     }
     a{
       background-color: $yellow;
+      border-radius: 0 0 20px 0;
     }
   }
 }
@@ -747,6 +768,139 @@ button, a {
   opacity: 1;
 }
 
-#list li {
-  cursor: pointer;
+.checkmark {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: block;
+  stroke-width: 2;
+  stroke: $yellow;
+  stroke-miterlimit: 10;
+  box-shadow: inset 0px 0px 0px $yellow;
+  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+  position:relative;
+  top: 5px;
+  right: 5px;
+  margin: 0 auto;
+}
+.checkmark__circle {
+  stroke-dasharray: 166;
+  stroke-dashoffset: 166;
+  stroke-width: 2;
+  stroke-miterlimit: 10;
+  stroke: $yellow;
+  fill: #fff;
+  animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+
+}
+
+.checkmark__check {
+  transform-origin: 50% 50%;
+  stroke-dasharray: 48;
+  stroke-dashoffset: 48;
+  animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+  100% {
+      stroke-dashoffset: 0;
+  }
+}
+
+@keyframes scale {
+  0%, 100% {
+      transform: none;
+  }
+
+  50% {
+      transform: scale3d(1.1, 1.1, 1);
+  }
+}
+
+@keyframes fill {
+  100% {
+      box-shadow: inset 0px 0px 0px 20px $yellow;
+  }
+}
+
+.area_bx_thema{
+  display: flex;
+  justify-content: space-between;
+  margin: 35px 0;
+  .bx_thema{
+    width: calc(50% - 5px);
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    .t_cont{
+      border-radius: 25px;
+      padding: 20px;
+      h3{
+        @include font(18, 18, $white);
+        font-family: 'Pretendard-Bold';
+        margin-bottom: 10px;
+      }
+      p{
+        font-family: 'Pretendard-SemiBold'!important;
+        color: $white!important;
+        font-size: 15px!important;
+        line-height: 18px!important;
+        overflow: hidden;
+        white-space: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient:vertical;
+      }
+      &.one{
+        position: relative;
+        background-color: #F48383;
+        box-shadow: 0 0 20px 2px rgba(253,117,117,0.5);
+        height: 196px;
+        &::before{
+          @include setCont(110px, 110px, inline-block, absolute);
+          @include bg("/t_cont_two.png", no-repeat, 50% 50%, 100% auto);
+          bottom: 0;
+        }
+      }
+      &.two{
+        position: relative;
+        background-color: #AA8FFF;
+        box-shadow: 0 0 20px 2px rgba(121,0,242,0.4);
+        margin-top: 10px;
+        height: 163px;
+        &::before{
+          @include setCont(120px, 120px, inline-block, absolute);
+          @include bg("/t_cont_one.png", no-repeat, 50% 50%, 100% auto);
+          bottom: -20px;
+          right: -20px;
+        }
+      }
+      &.three{
+        position: relative;
+        background-color: #37DD80;
+        box-shadow: 0 0 20px 2px rgba(1,150,69,0.4);
+        height: 163px;
+        &::before{
+          @include setCont(80px, 80px, inline-block, absolute);
+          @include bg("/t_cont_three.png", no-repeat, 50% 50%, 100% auto);
+          bottom: 0;
+          left: 50%;
+          margin-left: -40px;
+        }
+      }
+      &.four{
+        position: relative;
+        background-color: #FACC2D;
+        box-shadow: 0 0 20px 2px rgba(188, 148, 8,0.4);
+        margin-top: 10px;
+        height: 196px;
+        &::before{
+          @include setCont(100px, 100px, inline-block, absolute);
+          @include bg("/t_cont_four.png", no-repeat, 50% 50%, 100% auto);
+          bottom: -5px;
+          right: 10px;
+        }
+      }
+    }
+  }
 }
