--- a/src/assets/scss/_sub.scss
+++ b/src/assets/scss/_sub.scss
@@ -1,56 +1,106 @@
 .login{
-  .container{
-    @include setCont(100%, 100%, flex, relative);
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    touch-action: none;
-    .logo{
-      @include setCont(100%, 100%, flex, relative);
-      @include bg("/login_bg.svg", no-repeat, 50% 50%, 100% auto);
-      @include blind;
-      flex-grow: 1;
-      max-width: 358px;
-      min-height: 358px;
-      margin: 0 auto;
-      left: 1px;
-    }
-    .bottom{
-      @include setCont(100%, 100%, block, relative);
-      padding: 100px 0;
-      flex-shrink: 0;
-      text-align: center;
-      h1{
-        @include font(23, 23, $black, 600);
-        font-family: 'Pretendard-Bold';
-      }
-      span{
-        @include font(17, 17, $gray, 400);
-        font-family: 'Pretendard-SemiBold';
-        display: block;
-        margin: 15px 0 35px;
-      }
-      .btn{
-        @include font(17, 17, $white);
-        font-family: 'Pretendard-Medium';
-        box-shadow: 0 0 20px 2px rgba(0,0,0,0.09);
-        width: 200px;
-        background: rgb(247,199,0);
-        background: linear-gradient(90deg, rgba(247,199,0,1) 0%, rgba(251,159,130,1) 100%);
-        padding: 13px 45px;
-        @include tablet {
-          padding: 15px 20px;
+  @include setCont(100%, 100%, block, relative);
+  overflow: hidden;
+  .swiper-container{
+    display: flex;
+    .swiper-slide{
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      .col2{
+        flex-direction: column;
+        height: 100vh;
+        width: 100%;
+        background-color: $white;
+        .col{
+          letter-spacing: -0.5px;
+          width: 100%;
+          h2{
+            @include font(25, 25, $black);
+            font-family: 'Pretendard-Bold';
+            margin-top: 44px;
+          }
+          span{
+            @include font(17, 23, #AAAAAA);
+            display: inline-block;
+            font-family: 'Pretendard-Medium';
+            padding-top: 20px;
+          }
+          &.top{
+            background-color: #F8F8F8;
+            padding: 20px 0;
+            &.one{
+              .img{
+                @include setCont(100%, 100%, block, relative);
+                @include bg("/login1.svg", no-repeat, 50% 50%, contain);
+              }
+            }
+            &.two{
+              .img{
+                @include setCont(100%, 100%, block, relative);
+                @include bg("/login2.svg", no-repeat, 50% 50%, contain);
+              }
+            }
+            &.three{
+              .img{
+                @include setCont(100%, 100%, block, relative);
+                @include bg("/login3.png", no-repeat, 50% 50%, contain);
+              }
+            }
+          }
         }
       }
     }
   }
+  .bottom{
+    @include setCont(200px, 60px, flex, fixed);
+    @include font(20, 20, $white);
+    flex-direction: column;
+    font-family: 'Pretendard-Bold';
+    bottom: 50px;
+    left: 50%;
+    margin-left: -100px;
+    z-index: 1000;
+    .btn{
+      box-shadow: 0 8px 10px rgba(255,229,160,.4);
+    }
+    .swiper-pagination{
+      top: -30px;
+    }
+  }
+}
+@keyframes motion {
+	0% {margin-top: 0px;}
+	100% {margin-top: 10px;}
 }
 .detail{
   .area{
     padding: 25px;
     .visual{
-      padding: 40px 25px 30px 25px;
+      position: relative;
+      padding: 60px 25px 30px 25px;
+      .acce{
+        &.one{
+          @include setCont(15px, 15px, block, absolute);
+          @include bgSvg(icoAcceone(), no-repeat, 50% 50%, 100% auto);
+          right: 50px;
+          animation: motion 1s linear 0s infinite alternate; margin-top: 0;
+        }
+        &.two{
+          @include setCont(18px, 18px, block, absolute);
+          @include bgSvg(icoAccetwo(), no-repeat, 50% 50%, 100% auto);
+          right: 40px;
+          top: 170px;
+          animation: motion 2s linear 0s infinite alternate; margin-top: 0;
+        }
+        &.three{
+          @include setCont(20px, 20px, block, absolute);
+          @include bgSvg(icoAccethree(), no-repeat, 50% 50%, 100% auto);
+          left: 50px;
+          top: 200px;
+          animation: motion 0.7s linear 0s infinite alternate; margin-top: 0;
+        }
+      }
       .right{
         h2{
           margin: 30px 0 20px;
@@ -68,10 +118,9 @@
     .visual{
       .left{
         @include setCont(231px, 149px, block, relative);
-        @include bg("/uiux_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include bg("/t_cont_two.png", no-repeat, 50% 50%, 100% auto);
         @include blind;
         min-width: 96px;
-        margin-right: 15px;
       }
     }
     // .area_bx_infor{
@@ -106,11 +155,11 @@
   &.graphicdesign{
     .visual{
       .left{
-        @include setCont(160px, 160px, block, relative);
-        @include bg("/graphic_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include setCont(170px, 160px, block, relative);
+        @include bg("/t_cont_three.png", no-repeat, 50% 50%, 100% auto);
         @include blind;
         min-width: 96px;
-        margin-right: 15px;
+        margin-left: 15px;
       }
     }
   }
@@ -129,7 +178,7 @@
     .visual{
       .left{
         @include setCont(193px, 179px, block, relative);
-        @include bg("/motion_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include bg("/t_cont_one.png", no-repeat, 50% 50%, 100% auto);
         @include blind;
         min-width: 96px;
         margin-right: 15px;
@@ -145,10 +194,9 @@
     .visual{
       .left{
         @include setCont(208px, 147px, block, relative);
-        @include bg("/package_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include bg("/t_cont_four.png", no-repeat, 50% 50%, 100% auto);
         @include blind;
         min-width: 96px;
-        margin-right: 15px;
       }
     }
   }
@@ -532,6 +580,18 @@ a {
           @include bg("/2d/2d7.jpeg", no-repeat, 50% 50%, auto 100%);
         }
       }
+      &:nth-of-type(8){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d8.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(9){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/2d/2d9.png", no-repeat, 50% 50%, auto 100%);
+        }
+      }
     }
    }
 }
@@ -691,6 +751,12 @@ a {
         .img{
           @include setCont(100%, 100%, block, relative);
           @include bg("/basicstere/basicstere6.png", no-repeat, 50% 50%, auto 100%);
+        }
+      }
+      &:nth-of-type(7){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/basicstere/basicstere7.png", no-repeat, 50% 50%, auto 100%);
         }
       }
     }
@@ -1127,6 +1193,12 @@ a {
           @include bg("/basicplane/basicplane3.png", no-repeat, 50% 50%, 100% auto);
         }
       }
+      &:nth-of-type(4){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/basicplane/basicplane4.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
     }
   }
 }
@@ -1313,6 +1385,36 @@ a {
           @include bg("/serviceexprience/serviceexperience10.png", no-repeat, 50% 50%, 100% auto);
         }
       }
+      &:nth-of-type(10){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience11.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(11){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience12.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(12){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience13.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(13){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience14.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
+      &:nth-of-type(14){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/serviceexprience/serviceexperience15.png", no-repeat, 50% 50%, 100% auto);
+        }
+      }
     }
    }
 }
@@ -1496,6 +1598,42 @@ a {
           @include bg("/social/social5.png", no-repeat, 50% 50%,  auto 100%);
         }
       }
+      &:nth-of-type(6){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social6.png", no-repeat, 50% 50%,  auto 100%);
+        }
+      }
+      &:nth-of-type(7){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social7.png", no-repeat, 50% 50%,  100% auto);
+        }
+      }
+      &:nth-of-type(8){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social8.jpeg", no-repeat, 50% 50%,  auto 100%);
+        }
+      }
+      &:nth-of-type(9){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social9.jpeg", no-repeat, 50% 50%,  auto 100%);
+        }
+      }
+      &:nth-of-type(10){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social10.jpeg", no-repeat, 50% 50%,  auto 100%);
+        }
+      }
+      &:nth-of-type(11){
+        .img{
+          @include setCont(100%, 100%, block, relative);
+          @include bg("/social/social11.jpeg", no-repeat, 50% 50%,  auto 100%);
+        }
+      }
     }
    }
 }
@@ -1571,78 +1709,134 @@ a {
       }
     }
   }
-  .table-shopping-cart{
-    padding: 20px;
-    margin-top: 20px;
-    box-shadow: 0px 0px 7px 3px rgba(235, 235, 235, 0.3);
-    .table-head{
-      background-color: rgba(254, 222, 130, 0.8);
-      th{
-        @include font(15, 17);
-        font-family: 'Pretendard-SemiBold';
-        padding: 10px;
-        width: 25%;
-        text-align: center;
-        &.b-radi-left{
-          width: 50%;
-          border-radius: 5px 0 0 0;
-        }
-        &.b-radi-right{
-          border-radius: 0 5px 0 0;
+  .wrap-table-shopping-cart{
+    .tit{
+      margin-bottom: 15px;
+    }
+    .bx_subject_item{
+      position: relative;
+      box-shadow: none;
+      justify-content: flex-end;
+      height: auto;
+      margin-top: 0;
+      box-shadow: none;
+      // &:nth-of-type(1){
+      //   .bx_item_list{
+      //     .bx_subject{
+      //       background-color: $yellow;
+      //       .area_subject_cont{
+      //         p{
+      //           @include font(15, 15, $black);
+      //         }
+      //         .subject_cont{
+      //           li{
+      //             color: $black;
+      //             &.grades{
+      //               border-right: 1px solid $black;
+      //               border-left: 1px solid $black;
+      //             }
+      //           }
+      //         }
+      //       }
+      //     }
+      //   }
+      // }
+      .grades{
+        &::before{
+          display: none;
         }
       }
-    }
-    .table-row{
-      display: table-row!important;
-      position: relative;
-      width: 100%;
-      border: none;
-      td{
-        @include font(14, 17);
-        font-family: 'Pretendard-Medium';
-        position: relative;
-        width: 25%;
-        padding: 10px;
-        height: 50px;
-        text-align: center;
-        border-bottom: 0.5px solid #ddd;
-        &.tit{
-          width: 50%;
-          text-align: left;
-          padding-left: 40px;
+      .round{
+        @include setCont(15px, 15px, block, relative);
+        background-color: #fff;
+        border: 1px solid #F7C700;
+        flex-shrink: 0;
+        border-radius: 20px;
+        left: 5px;
+        &::after{
+          @include setCont(7px, 7px, block, absolute);
+          border-radius: 20px;
+          background-color: #F7C700;
+          top: 49.9%;
+          left: 49.5%;
+          transform: translate(-50%, -50%);
         }
-        button{
-          @include setCont(20px, 20px, block, absolute);
-          background-color: #e65540;
-          border-radius: 50%;
-          left: 10px;
-          top: 15px;
-          .fa-minus{
-            color: $white;
+      }
+      .bx_item_list{
+        display: flex;
+        justify-content: space-between;
+        .bx_subject{
+          width: calc(100% - 30px);
+          flex-grow: 1;
+          box-shadow: 0px 0px 10px rgba(67, 67, 67, 0.1);
+          border-radius: 20px;
+          padding: 20px;
+          margin: 10px 0 10px 15px;
+          .subject_top{
+            display: flex;
+            justify-content: space-between;
+            padding-bottom: 10px;
+            align-items: center;
+            border: none;
+            h3{
+              @include font(16, 16, $black);
+              font-family: 'Pretendard-SemiBold';
+            }
+            button{
+              @include font(11, 11, #e65540);
+              font-family: 'Pretendard-SemiBold';
+              border: 1px solid #e65540;
+              padding: 3px 5px;
+              border-radius: 5px;
+              opacity: 0.7;
+            }
+          }
+          .area_subject_cont{
+            p{
+              @include font(15, 15, #9E9E9E);
+              font-family: 'Pretendard-Medium';
+              overflow:hidden;
+              text-overflow:ellipsis;
+              white-space:nowrap;
+              margin-bottom: 10px;
+            }
           }
         }
       }
-    }
-    .table_cont{
-      padding: 60px 0 50px 0;
-      a{
-        display: block;
-        text-align: center;
+      &::after{
+        @include setCont(2px, 100%, block, absolute);
+        background-color: $yellow;
+        left: 11px;
+        top: 0;
+        opacity: 0.2;
       }
-      span{
-        @include font(12, 12, $dark_gray);
-        display: flex;
-        flex-direction: column;
-        position: relative;
-        font-family: 'Pretendard-Regular';
+      &.type2{
+        .bx_subject{
+          background-color: $yellow;
+          box-shadow: 0 5px 10px rgba(255, 229, 160, 0.8);
+        }
         &::before{
-          @include setCont(20px, 20px, block, absolute);
-          @include bgSvg(icoPlus(), no-repeat, 50% 50%, 100% auto);
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          margin-top: -20px;
+          @include setCont(7px, 7px, block, absolute);
+          border-radius: 20px;
+          background-color: #F7C700;
+          bottom: 0;
+          left: 8px;
+        }
+      }
+    }
+    a{
+      padding: 0;
+      .a_go{
+        display: flex;
+        justify-content: center;
+        font-family: 'Pretendard-Regular';
+        align-items: center;
+        &::before{
+          @include setCont(30px, 30px, block, relative);
+          @include bgSvg(icoPlus("fff"), no-repeat, 50% 50%, 100% auto);
+        }
+        p{
+          @include font(15, 15, $white);
         }
       }
     }
