--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -241,7 +241,7 @@ button, a {
       background-color: #000;
       .img{
         @include setCont(136px, 136px, block, relative);
-        @include bg("/3d_list.svg", no-repeat, 50% 50%, 100% auto);
+        @include bg("/3d_list.png", no-repeat, 50% 50%, 100% auto);
       }
       .tit{
         color: $white;
