--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -92,12 +92,83 @@
       font-family: 'Pretendard-ExtraBold';
       padding: 10px 25px 0 25px;
     }
-    .img{
-      @include setCont(100%, 460px, block, relative);
-      @include bg("/main_a2_1.png", no-repeat, 50% 50%, contain);
-      @include blind;
-      margin:  0 auto;
-      z-index: 1000;
+    // .img{
+    //   @include setCont(100%, 460px, block, relative);
+    //   @include bg("/main_a2_1.png", no-repeat, 50% 50%, contain);
+    //   @include blind;
+    //   margin:  0 auto;
+    //   z-index: 1000;
+    // }
+    .img_group{
+      @include setCont(100%, 470px, block, relative);
+      max-height: 470px;
+      .img1{
+        @include setCont(90px, 90px, block, absolute);
+        @include bg("/main_img1.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 175px;
+        left: 3%;
+        transform: translateX(-50%);
+        animation-delay: 0.5s;
+        -webkit-animation-delay: 0.5s;
+      }
+      .img2{
+        @include setCont(80px, 80px, block, absolute);
+        @include bg("/main_img2.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 105px;
+        left: 13%;
+        animation-delay: 0.7s;
+        -webkit-animation-delay: 0.7s;
+      }
+      .img3{
+        @include setCont(75px, 75px, block, absolute);
+        @include bg("/main_img3.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 85px;
+        left: 35%;
+        transform: translateX(-50%);
+        animation-delay: 0.9s;
+        -webkit-animation-delay: 0.9s;
+      }
+      .img4{
+        @include setCont(75px, 75px, block, absolute);
+        @include bg("/main_img4.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 97px;
+        left: 50%;
+        transform: translateX(-50%);
+        animation-delay: 0.9s;
+        -webkit-animation-delay: 0.9s;
+      }
+      .img5{
+        @include setCont(95px, 95px, block, absolute);
+        @include bg("/main_img5.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 115px;
+        left: 65%;
+        transform: translateX(-50%);
+        animation-delay: 1.1s;
+        -webkit-animation-delay: 1.1s;
+      }
+      .img6{
+        @include setCont(130px, 75px, block, absolute);
+        @include bg("/main_img6.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        top: 190px;
+        left: 60%;
+        transform: translateX(-50%);
+        animation-delay: 1.3s;
+        -webkit-animation-delay: 1.3s;
+      }
+      .img7{
+        @include setCont(80%, 260px, block, absolute);
+        @include bg("/main_img7.png", no-repeat, 50% 50%, contain);
+        z-index: 1000;
+        bottom: 45px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
     }
     .bx_bubble{
       @include font(13, 18);
@@ -244,6 +315,66 @@
     }
   }
 }
+
+@-webkit-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(.3);
+    transform: scale(.3);
+  }
+
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+  }
+
+  70% {
+    -webkit-transform: scale(.9);
+    transform: scale(.9);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(.3);
+    -ms-transform: scale(.3);
+    transform: scale(.3);
+  }
+
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+  }
+
+  70% {
+    -webkit-transform: scale(.9);
+    -ms-transform: scale(.9);
+    transform: scale(.9);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.bounceIn {
+  -webkit-animation-name: bounceIn;
+  animation-name: bounceIn;
+}
+
 
 @keyframes bg{
   0%{
